@@ -14,7 +14,7 @@
 configuration: stable
 # Specify the software to use. Software name must match an entry in
 # configure.cfg.
-software-versions: fm-0.5.0 piplib-1.3.6-patched clan-0.6.0 candl-0.5.0 letsee-0.2.0-pre polylib-5.22.5 cloog-0.16.2 pluto-0.5.2-pace scoplib-0.2.1 pragmatize-0.1.0 scoptools-0.2.0 clasttools-0.2.0 clastannotation-0.1.0 piplib-gmp-1.3.6-mp isl-0.06 past-0.1.0 polyfeat-0.1.0 ptile-0.1.0 irconverter-0.1.0
+software-versions: fm piplib clan candl letsee polylib cloog pluto scoplib pragmatize scoptools clasttools clastannotation piplib-gmp isl past polyfeat ptile irconverter
 
 # The rest of the file is not used for the moment.
 pass-thru: clan candl cloog
