@@ -21,19 +21,19 @@
 # make-depends: list modules that need to be built before.
 
 ## IR
-[scoplib-0.2.1]
+[scoplib]
 category: ir
 module: scoplib
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/scoplib-0.2.1.tar.gz
 retrieve-method: wget
 
-[past-0.1.0]
+[past]
 category: ir
 module: past
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/past-0.1.0.tar.gz
 retrieve-method: wget
 
-[scoptools-0.2.0]
+[scoptools]
 category: ir
 module: scoptools
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/scoptools-0.2.0.tar.gz
@@ -41,7 +41,7 @@ retrieve-method: wget
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-clan=$poccsrcdir/analyzers/install-clan --with-clasttools=$poccsrcdir/generators/install-clasttools --with-past=$poccsrcdir/ir/install-past
 make-depends: scoplib cloog clan clasttools past
 
-[irconverter-0.1.0]
+[irconverter]
 category: ir
 module: irconverter
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules//irconverter-0.1.0.tar.gz
@@ -50,7 +50,7 @@ configure: --with-scoplib=$poccsrcdir/ir/install-scoplib  --with-past=$poccsrcdi
 make-depends: scoplib past
 
 ## Analyzers
-[clan-0.6.0]
+[clan]
 category: analyzers
 module: clan
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/clan-0.6.0.tar.gz
@@ -58,7 +58,7 @@ retrieve-method: wget
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib
 make-depends: scoplib
 
-[candl-0.5.0]
+[candl]
 category: analyzers
 module: candl
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/candl-0.5.0.tar.gz
@@ -66,7 +66,7 @@ retrieve-method: wget
 configure: --with-piplib=$poccsrcdir/math/install-piplib --with-scoplib=$poccsrcdir/ir/install-scoplib --with-isl=$poccsrcdir/math/install-isl --with-gmp-prefix=$poccsrcdir/math/external/install
 make-depends: piplib scoplib isl
 
-[polyfeat-0.1.0]
+[polyfeat]
 category: analyzers
 module: polyfeat
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/polyfeat-0.1.0.tar.gz
@@ -75,7 +75,7 @@ configure: --with-piplib=$poccsrcdir/math/install-piplib --with-scoplib=$poccsrc
 make-depends: piplib scoplib candl polylib fm
 
 ## Math
-[fm-0.5.0]
+[fm]
 category: math
 module: fm
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/fm-0.5.0.tar.gz
@@ -83,26 +83,26 @@ retrieve-method: wget
 configure: --with-piplib=$poccsrcdir/math/install-piplib
 make-depends: piplib
 
-[polylib-5.22.5]
+[polylib]
 category: math
 module: polylib
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/polylib-5.22.5.tar.gz
 retrieve-method: wget
 
-[piplib-1.3.6-patched]
+[piplib]
 category: math
 module: piplib
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/piplib-1.3.6-patched.tar.gz
 retrieve-method: wget
 
-[piplib-gmp-1.3.6-mp]
+[piplib-gmp]
 category: math
 module: piplib-gmp
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/piplib-gmp-1.3.6-mp.tar.gz
 configure: --with-gmp=$poccsrcdir/math/external/install --without-pip --with-libs
 retrieve-method: wget
 
-[isl-0.06]
+[isl]
 category: math
 module: isl
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/isl-0.06.tar.gz
@@ -111,7 +111,7 @@ configure: --with-gmp-prefix=$poccsrcdir/math/external/install --with-gmp-exec-p
 
 
 ## Generators
-[cloog-0.16.2]
+[cloog]
 category: generators
 module: cloog
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/cloog-0.16.2.tar.gz
@@ -119,7 +119,7 @@ retrieve-method: wget
 configure: --with-isl=system --with-isl-prefix=$poccsrcdir/math/install-isl --with-gmp-prefix=$poccsrcdir/math/external/install --without-piplib
 make-depends: isl
 
-[pragmatize-0.1.0]
+[pragmatize]
 category: generators
 module: pragmatize
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/pragmatize-0.1.0.tar.gz
@@ -127,7 +127,7 @@ retrieve-method: wget
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-clasttools=$poccsrcdir/generators/install-clasttools
 make-depends: scoplib cloog clasttools
 
-[clasttools-0.2.0]
+[clasttools]
 category: generators
 module: clasttools
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/clasttools-0.2.0.tar.gz
@@ -135,7 +135,7 @@ retrieve-method: wget
 configure: --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-past=$poccsrcdir/ir/install-past
 make-depends: cloog past
 
-[clastannotation-0.1.0]
+[clastannotation]
 category: generators
 module: clastannotation
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/clastannotation-0.1.0.tar.gz
@@ -143,7 +143,7 @@ retrieve-method: wget
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools
 make-depends: scoplib cloog candl piplib scoptools clasttools
 
-[ptile-0.1.0]
+[ptile]
 category: generators
 module: ptile
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/ptile-0.1.0.tar.gz
@@ -152,7 +152,7 @@ configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdi
 make-depends: scoplib cloog candl piplib scoptools clasttools past irconverter
 
 ## Optimizers
-[letsee-0.2.0-pre]
+[letsee]
 category: optimizers
 module: letsee
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/letsee-0.2.0-pre.tar.gz
@@ -160,7 +160,7 @@ retrieve-method: wget
 configure: --with-candl=$poccsrcdir/analyzers/install-candl --with-fm=$poccsrcdir/math/install-fm --with-piplib=$poccsrcdir/math/install-piplib --with-pocc-utils=$poccsrcdir/driver/install-pocc --with-scoplib=$poccsrcdir/ir/install-scoplib
 make-depends: candl fm piplib scoplib
 
-[pluto-0.5.2-pace]
+[pluto]
 category: optimizers
 module: pluto
 location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/pluto-0.5.2-pace.tar.gz
